buildutilities/makeParser.py
# Generated from ./make.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class makeParser ( Parser ):

    grammarFileName = "make.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "':'", "'='", "'..'", "<INVALID>", 
                     "'\\'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WORD", "BACKSLASH", "STRING", "BASHOP", 
                      "FLAG", "COMMENT", "NEWLINE", "WS" ]

    RULE_file = 0
    RULE_content = 1
    RULE_recipe = 2
    RULE_target = 3
    RULE_dependents = 4
    RULE_dependent = 5
    RULE_assignment = 6
    RULE_varname = 7
    RULE_assignee = 8
    RULE_continued = 9
    RULE_commands = 10
    RULE_command = 11
    RULE_filename = 12

    ruleNames =  [ "file", "content", "recipe", "target", "dependents", 
                   "dependent", "assignment", "varname", "assignee", "continued", 
                   "commands", "command", "filename" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    WORD=5
    BACKSLASH=6
    STRING=7
    BASHOP=8
    FLAG=9
    COMMENT=10
    NEWLINE=11
    WS=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class FileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(makeParser.EOF, 0)

        def content(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(makeParser.ContentContext)
            else:
                return self.getTypedRuleContext(makeParser.ContentContext,i)


        def getRuleIndex(self):
            return makeParser.RULE_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile" ):
                listener.enterFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile" ):
                listener.exitFile(self)




    def file_(self):

        localctx = makeParser.FileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2098) != 0):
                self.state = 26
                self.content()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(makeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(makeParser.AssignmentContext,0)


        def NEWLINE(self):
            return self.getToken(makeParser.NEWLINE, 0)

        def recipe(self):
            return self.getTypedRuleContext(makeParser.RecipeContext,0)


        def WORD(self):
            return self.getToken(makeParser.WORD, 0)

        def filename(self):
            return self.getTypedRuleContext(makeParser.FilenameContext,0)


        def getRuleIndex(self):
            return makeParser.RULE_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)




    def content(self):

        localctx = makeParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_content)
        try:
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self.assignment()
                self.state = 35
                self.match(makeParser.NEWLINE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.recipe()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.match(makeParser.NEWLINE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                self.match(makeParser.WORD)
                self.state = 40
                self.filename()
                self.state = 41
                self.match(makeParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RecipeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return makeParser.RULE_recipe

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SpecialRecipeContext(RecipeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a makeParser.RecipeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(makeParser.WORD)
            else:
                return self.getToken(makeParser.WORD, i)
        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(makeParser.NEWLINE)
            else:
                return self.getToken(makeParser.NEWLINE, i)
        def commands(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(makeParser.CommandsContext)
            else:
                return self.getTypedRuleContext(makeParser.CommandsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpecialRecipe" ):
                listener.enterSpecialRecipe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpecialRecipe" ):
                listener.exitSpecialRecipe(self)


    class RegularRecipeContext(RecipeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a makeParser.RecipeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def target(self):
            return self.getTypedRuleContext(makeParser.TargetContext,0)

        def dependents(self):
            return self.getTypedRuleContext(makeParser.DependentsContext,0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(makeParser.NEWLINE)
            else:
                return self.getToken(makeParser.NEWLINE, i)
        def commands(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(makeParser.CommandsContext)
            else:
                return self.getTypedRuleContext(makeParser.CommandsContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegularRecipe" ):
                listener.enterRegularRecipe(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegularRecipe" ):
                listener.exitRegularRecipe(self)



    def recipe(self):

        localctx = makeParser.RecipeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_recipe)
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = makeParser.SpecialRecipeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(makeParser.T__0)
                self.state = 46
                self.match(makeParser.WORD)
                self.state = 47
                self.match(makeParser.T__0)
                self.state = 48
                self.match(makeParser.WORD)
                self.state = 49
                self.match(makeParser.T__1)
                self.state = 50
                self.match(makeParser.NEWLINE)
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 51
                        self.commands()
                        self.state = 52
                        self.match(makeParser.NEWLINE) 
                    self.state = 58
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                pass

            elif la_ == 2:
                localctx = makeParser.RegularRecipeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.target()
                self.state = 60
                self.match(makeParser.T__1)
                self.state = 61
                self.dependents()
                self.state = 62
                self.match(makeParser.NEWLINE)
                self.state = 68
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 63
                        self.commands()
                        self.state = 64
                        self.match(makeParser.NEWLINE) 
                    self.state = 70
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TargetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def filename(self):
            return self.getTypedRuleContext(makeParser.FilenameContext,0)


        def getRuleIndex(self):
            return makeParser.RULE_target

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarget" ):
                listener.enterTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarget" ):
                listener.exitTarget(self)




    def target(self):

        localctx = makeParser.TargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_target)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.filename()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DependentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def dependent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(makeParser.DependentContext)
            else:
                return self.getTypedRuleContext(makeParser.DependentContext,i)


        def getRuleIndex(self):
            return makeParser.RULE_dependents

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDependents" ):
                listener.enterDependents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDependents" ):
                listener.exitDependents(self)




    def dependents(self):

        localctx = makeParser.DependentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dependents)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 114) != 0):
                self.state = 75
                self.dependent()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DependentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return makeParser.RULE_dependent

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UsefulDependentContext(DependentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a makeParser.DependentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def filename(self):
            return self.getTypedRuleContext(makeParser.FilenameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsefulDependent" ):
                listener.enterUsefulDependent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsefulDependent" ):
                listener.exitUsefulDependent(self)


    class UselessDependentContext(DependentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a makeParser.DependentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def continued(self):
            return self.getTypedRuleContext(makeParser.ContinuedContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUselessDependent" ):
                listener.enterUselessDependent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUselessDependent" ):
                listener.exitUselessDependent(self)



    def dependent(self):

        localctx = makeParser.DependentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dependent)
        try:
            self.state = 83
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 4, 5]:
                localctx = makeParser.UsefulDependentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.filename()
                pass
            elif token in [6]:
                localctx = makeParser.UselessDependentContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.continued()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varname(self):
            return self.getTypedRuleContext(makeParser.VarnameContext,0)


        def assignee(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(makeParser.AssigneeContext)
            else:
                return self.getTypedRuleContext(makeParser.AssigneeContext,i)


        def getRuleIndex(self):
            return makeParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = makeParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.varname()
            self.state = 86
            self.match(makeParser.T__2)
            self.state = 88 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 87
                    self.assignee()

                else:
                    raise NoViableAltException(self)
                self.state = 90 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarnameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(makeParser.WORD, 0)

        def getRuleIndex(self):
            return makeParser.RULE_varname

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarname" ):
                listener.enterVarname(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarname" ):
                listener.exitVarname(self)




    def varname(self):

        localctx = makeParser.VarnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varname)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(makeParser.WORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssigneeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return makeParser.RULE_assignee

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class UsefulAssigneeContext(AssigneeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a makeParser.AssigneeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def filename(self):
            return self.getTypedRuleContext(makeParser.FilenameContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUsefulAssignee" ):
                listener.enterUsefulAssignee(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUsefulAssignee" ):
                listener.exitUsefulAssignee(self)


    class UselessAssigneeContext(AssigneeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a makeParser.AssigneeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def continued(self):
            return self.getTypedRuleContext(makeParser.ContinuedContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUselessAssignee" ):
                listener.enterUselessAssignee(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUselessAssignee" ):
                listener.exitUselessAssignee(self)



    def assignee(self):

        localctx = makeParser.AssigneeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assignee)
        try:
            self.state = 96
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                localctx = makeParser.UselessAssigneeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.continued()
                pass
            elif token in [1, 4, 5]:
                localctx = makeParser.UsefulAssigneeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.filename()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinuedContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BACKSLASH(self):
            return self.getToken(makeParser.BACKSLASH, 0)

        def NEWLINE(self):
            return self.getToken(makeParser.NEWLINE, 0)

        def getRuleIndex(self):
            return makeParser.RULE_continued

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContinued" ):
                listener.enterContinued(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContinued" ):
                listener.exitContinued(self)




    def continued(self):

        localctx = makeParser.ContinuedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_continued)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(makeParser.BACKSLASH)
            self.state = 99
            self.match(makeParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def command(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(makeParser.CommandContext)
            else:
                return self.getTypedRuleContext(makeParser.CommandContext,i)


        def getRuleIndex(self):
            return makeParser.RULE_commands

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommands" ):
                listener.enterCommands(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommands" ):
                listener.exitCommands(self)




    def commands(self):

        localctx = makeParser.CommandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_commands)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 101
                self.command()
                self.state = 104 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1010) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self):
            return self.getToken(makeParser.WORD, 0)

        def filename(self):
            return self.getTypedRuleContext(makeParser.FilenameContext,0)


        def FLAG(self):
            return self.getToken(makeParser.FLAG, 0)

        def STRING(self):
            return self.getToken(makeParser.STRING, 0)

        def BASHOP(self):
            return self.getToken(makeParser.BASHOP, 0)

        def assignment(self):
            return self.getTypedRuleContext(makeParser.AssignmentContext,0)


        def continued(self):
            return self.getTypedRuleContext(makeParser.ContinuedContext,0)


        def getRuleIndex(self):
            return makeParser.RULE_command

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommand" ):
                listener.enterCommand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommand" ):
                listener.exitCommand(self)




    def command(self):

        localctx = makeParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_command)
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(makeParser.WORD)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.filename()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(makeParser.FLAG)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.match(makeParser.STRING)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 110
                self.match(makeParser.BASHOP)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 111
                self.assignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 112
                self.continued()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilenameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(makeParser.WORD)
            else:
                return self.getToken(makeParser.WORD, i)

        def getRuleIndex(self):
            return makeParser.RULE_filename

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilename" ):
                listener.enterFilename(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilename" ):
                listener.exitFilename(self)




    def filename(self):

        localctx = makeParser.FilenameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_filename)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(makeParser.WORD)
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 116
                        self.match(makeParser.T__0)
                        self.state = 117
                        self.match(makeParser.WORD) 
                    self.state = 122
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(makeParser.T__3)
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(makeParser.T__0)
                self.state = 125
                self.match(makeParser.WORD)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





